# pbi_prototype_query_translation

./: .gitignore  404.html  ConsoleApp3.sln  README.md  index.html  objects.inv  translation.sln
.github/workflows/: deploy-docs.yml  deploy.yml
ConsoleApp3/: ConsoleApp3.csproj  Program.cs  Query.cs  Translation.py  Translation.pyi  test.py
ConsoleApp3/dependencies/: changes.txt
Translation/: ConsoleApp3.csproj  Program.cs  Query.cs  Translation.csproj
Translation/Properties/: AssemblyInfo.cs
Translation/dependencies/: changes.txt
api/: index.html
c_sharp_api/: index.html
python_bindings/: add_libs.py  pyproject.toml
python_bindings/pbi_prototype_query_translation/: __init__.py  main.py
python_bindings/pbi_translation/: Translation.pyi  __init__.py  main.py
search/: search_index.json
