[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]  Currently not needed, but I don't know why the DLLs are currently being included
# artifacts = [
#   "libs/*",
# ]

[project]
name = "pbi_translation"
description = "Converts PowerBI frontend Prototype Queries to DAX queries that can be understood by the SSAS backend"
readme = "README.md"
requires-python = ">=3.11.0"
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
dev = ["pre-commit>=3.8.0"]

[tool.doc8]
max-line-length = 120
file-encoding = "utf8"
